--- a/health_analysis.css
+++ b/health_analysis.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
 }
 nav {
-    background-color: #f0f0f0;
+    background-color: #51ac86;
     padding: 20px;
     display: flex;
     align-items: center;
